force-app/main/default/objects/Platform_Performance__c/Platform_Performance__c.object-meta.xml
<CustomObject>
    <description>SP-1592 - Platform_Performance objects holds all information around country specific Websites, Backends in countries with multiple platforms (like pizza.de, lieferheld.de) AND/OR Account performance in general</description>
    <label>Platform Performance</label>
    <nameField>
        <label>Platform Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platforms Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>