force-app/main/default/objects/Platform_Performance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>SP-1592</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Platforms Performance</relationshipLabel>
    <relationshipName>Platforms_Performance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>