force-app/main/default/objects/Platform_Performance__c/fields/Account_RecordType_DevName_fm__c.field-meta.xml
<CustomField>
    <fullName>Account_RecordType_DevName_fm__c</fullName>
    <description>Needed to optimize some talend jobs</description>
    <formula>Account__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account RecordType DevName</label>
    <type>Text</type>
</CustomField>