force-app/main/default/objects/Platform_Performance__c/fields/Backend_ID__c.field-meta.xml
<CustomField>
    <fullName>Backend_ID__c</fullName>
    <description>SP-1592</description>
    <externalId>true</externalId>
    <label>Backend ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>