force-app/main/default/objects/Platform_Performance__c/fields/Commercial_Importance_Score__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Importance_Score__c</fullName>
    <label>Commercial Importance Score</label>
    <length>2</length>
    <type>Text</type>
</CustomField>