force-app/main/default/objects/Platform_Performance__c/fields/Commercial_Quality__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Quality__c</fullName>
    <label>Commercial Quality</label>
    <length>2</length>
    <type>Text</type>
</CustomField>