force-app/main/default/objects/Platform_Performance__c/fields/Contract_Number_SAP__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number_SAP__c</fullName>
    <description>Contract Number in SAP group by &quot;Razon Social&quot;</description>
    <externalId>true</externalId>
    <label>Contract number SAP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>