force-app/main/default/objects/Platform_Performance__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <label>Conversion Rate</label>
    <length>2</length>
    <type>Text</type>
</CustomField>