force-app/main/default/objects/Platform_Performance__c/fields/Debt_Value__c.field-meta.xml
<CustomField>
    <fullName>Debt_Value__c</fullName>
    <description>the debt value ( from SAP)</description>
    <label>Debt value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>