force-app/main/default/objects/Platform_Performance__c/fields/GMVClass__c.field-meta.xml
<CustomField>
    <fullName>GMVClass__c</fullName>
    <description>created for SP-3704</description>
    <label>GMV Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>