force-app/main/default/objects/Platform_Performance__c/fields/Is_our_best__c.field-meta.xml
<CustomField>
    <fullName>Is_our_best__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is our best</label>
    <type>Checkbox</type>
</CustomField>