force-app/main/default/objects/Platform_Performance__c/fields/Kill_Rate_Category__c.field-meta.xml
<CustomField>
    <fullName>Kill_Rate_Category__c</fullName>
    <label>Kill Rate Category</label>
    <length>1</length>
    <type>Text</type>
</CustomField>