force-app/main/default/objects/Platform_Performance__c/fields/LMIV__c.field-meta.xml
<CustomField>
    <fullName>LMIV__c</fullName>
    <description>SP-1592</description>
    <label>LMIV %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>