force-app/main/default/objects/Platform_Performance__c/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <externalId>true</externalId>
    <label>Migration_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>