force-app/main/default/objects/Platform_Performance__c/fields/Number_Pending_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Number_Pending_Invoices__c</fullName>
    <description>The number of pending invoices( from SAP)</description>
    <label>Number of pending invoices</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>