force-app/main/default/objects/Platform_Performance__c/fields/ON_Upsertable__c.field-meta.xml
<CustomField>
    <fullName>ON_Upsertable__c</fullName>
    <description>If checked, the Contact can be transferred by the JustOn Connector.</description>
    <formula>NOT(ISBLANK( Account__c ))
&amp;&amp;
NOT(ISBLANK( Backend_ID__c ))
&amp;&amp;
(TEXT(Platform__c)=&quot;PizzaDE&quot;
||
TEXT(Platform__c)=&quot;LieferheldDE&quot;)
&amp;&amp; Account__r.ON_Upsertable__c
&amp;&amp;  ISBLANK(Account__r.ON_LastUpsertError__c)</formula>
    <inlineHelpText>If checked, the Contact can be transferred by the JustOn Connector.</inlineHelpText>
    <label>Connector: Upsertable</label>
    <type>Checkbox</type>
</CustomField>