force-app/main/default/objects/Platform_Performance__c/fields/Platform_Online_Status__c.field-meta.xml
<CustomField>
    <fullName>Platform_Online_Status__c</fullName>
    <label>Platform Online Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Online_Status</valueSetName>
    </valueSet>
</CustomField>