force-app/main/default/objects/Platform_Performance__c/fields/Platform_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Platform_Payment_Method__c</fullName>
    <label>Platform Payment Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Method</valueSetName>
    </valueSet>
</CustomField>