force-app/main/default/objects/Platform_Performance__c/fields/Platform_Relay_Method__c.field-meta.xml
<CustomField>
    <fullName>Platform_Relay_Method__c</fullName>
    <description>SP-1730 Relay Method of the Platform</description>
    <label>Platform Relay Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Box helicom</fullName>
            </value>
            <value>
                <fullName>9cookies IOS</fullName>
            </value>
            <value>
                <fullName>Acom</fullName>
            </value>
            <value>
                <fullName>9cookies GO</fullName>
            </value>
            <value>
                <fullName>POS polling via device</fullName>
            </value>
            <value>
                <fullName>POS push</fullName>
            </value>
            <value>
                <fullName>POS push REST</fullName>
            </value>
            <value>
                <fullName>SMS Fallback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>