force-app/main/default/objects/Platform_Performance__c/fields/Restaurant_Operations__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Operations__c</fullName>
    <label>Restaurant Operations</label>
    <length>2</length>
    <type>Text</type>
</CustomField>