force-app/main/default/objects/Platform_Performance__c/fields/SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Number__c</fullName>
    <description>SP-1616</description>
    <label>SAP Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>