force-app/main/default/objects/Platform_Performance__c/fields/Vendor_Dashboard_Link__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Dashboard_Link__c</fullName>
    <formula>IF(ISBLANK(Backend_ID__c), &quot;&quot;, HYPERLINK(&quot;https://tableau.deliveryhero.com/#/site/Foodora/views/VendorDashboardMonthly/MainDashboard?Country=&quot; + TEXT(Account__r.Record_Country__c) + &quot;&amp;Vendor%20Code=&quot; + RIGHT(Backend_ID__c,4), &quot;Vendor Dashboard Link&quot;, &quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Dashboard Link</label>
    <type>Text</type>
</CustomField>