force-app/main/default/objects/Platform_Performance__c/fields/White_Label_Website__c.field-meta.xml
<CustomField>
    <fullName>White_Label_Website__c</fullName>
    <description>SP-1592</description>
    <label>White Label Website</label>
    <type>Url</type>
</CustomField>