force-app/main/default/objects/Platform_Performance__c/listViews/GLOBAL_Platforms_with_RQT_data.listView-meta.xml
<ListView>
    <fullName>GLOBAL_Platforms_with_RQT_data</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Backend_ID__c</columns>
    <columns>GRID__c</columns>
    <columns>Platform__c</columns>
    <columns>Platform_Online_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>GLOBAL - Platforms with RQT data</label>
    <language>en_US</language>
</ListView>